<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddStudentActivity">


    <EditText
        android:id="@+id/name"
        android:layout_width="271dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/student_name"
        android:singleLine="true"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/rollNo"
        android:layout_width="271dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="148dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/student_rollno"
        android:singleLine="true"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/branch"
        android:layout_width="271dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="243dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/student_branch"
        android:singleLine="true"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/email"
        android:layout_width="271dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="209dp"
        android:background="@drawable/edittext_style"
        android:hint="@string/student_email"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAlignment="center" />

    <Button
        android:id="@+id/addStudent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="107dp"
        android:background="@drawable/btn_green_bg"
        android:text="@string/add_student"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="add"/>


</RelativeLayout>